# LLama-Quant-Studio

./: package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/hooks/: useConversionJob.ts  useFileDrop.ts  useLlamaCppPath.ts  useQuantizationJob.ts
src/utils/: config.ts
