[package]
name = "llama_quant_studio"
version = "0.1.0"
description = "Llama Quant Studio Core Engine"
authors = ["Ibrahim Fadhili"]
edition = "2021"

[lib]
name = "llama_quant_studio_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
tauri = { version = "2.11.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros"] }

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }
